--- a/res/layout/fonis_appwidget.xml
+++ b/res/layout/fonis_appwidget.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/flWidgetView"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
     <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="5sp"
         android:padding="@dimen/widget_margin">
         
+        <!-- 
         <TextView 
             android:id="@+id/vesti_info" 
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
         
-        <LinearLayout 
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:layout_weight="0.20"
+            android:orientation="vertical" >
             
             <Button 
                 android:id="@+id/btnUP"
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/my_button_height" />
+                android:layout_height="wrap_content" />
             
             <Button 
                 android:id="@+id/btnDown"
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/my_button_height" />
+                android:layout_height="wrap_content" />
             
         </LinearLayout>
-        
+         -->
+         
+         <ListView 
+             android:id="@+id/lwVestiWidget"
+             android:layout_height="wrap_content"
+             android:layout_width="fill_parent"
+             />
     </LinearLayout>
-    
-
 </FrameLayout>
