--- a/res/layout/kontakt_activity.xml
+++ b/res/layout/kontakt_activity.xml
@@ -11,10 +11,9 @@
     
     
     <ListView
-        android:id="@+id/listView1"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-    </ListView>
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"/>
 
 </RelativeLayout>
