--- a/res/xml/example_appwidget_info.xml
+++ b/res/xml/example_appwidget_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="220dp"
+    android:minHeight="72dp"
     android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/fonis_appwidget"
-    android:configure="com.example.android.ExampleAppWidgetConfigure" >
+    android:resizeMode="horizontal|none" >
 </appwidget-provider>
